# 3D-Landing-Simulator

./: 3D-Landing-Simulator.sln  3D-Landing-Simulator.vcxproj  3D-Landing-Simulator.vcxproj.filters  ALTITUDE_DISPLAY_IMPLEMENTATION.md  ALTITUDE_FINAL_FIX.md  ALTITUDE_FIX_EXPLANATION.md  BUILD_FIX.md  CHANGES_DIFF.md  CMakeLists.txt  COMPILATION_FIXES.md  EXPLOSION_SOUND_IMPLEMENTATION.txt  FIX_COMPLETE.md  FUEL_SYSTEM_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  LANDER_FIX_QUICK_REFERENCE.md  LANDER_FLIPPING_FIX_SUMMARY.md  LIGHTING_IMPLEMENTATION_SUMMARY.md  NoClue.sln  NoClue.vcxproj  NoClue.vcxproj.filters  OCTREE_FIXES_SUMMARY.md  OCTREE_HANG_FIX.md  OCTREE_MIRRORING_FIX.md  OCTREE_TERRAIN_ANALYSIS.md  OCTREE_TERRAIN_FIXES_APPLIED.md  PARTICLE_QUICK_START.md  PARTICLE_SYSTEM_IMPLEMENTATION.md  README.md  addons.make  config.make  copy_dlls.ps1  octree-starter.code-workspace
Assets/: final_spacecraft.mtl
Assets/geo/: HDU_lowRez_part1.mtl  LEM-combined.mtl  burger.mtl  mars-low-v2-sav.mtl  mars-low-v2.mtl  mars-low.mtl  moon-houdini.mtl
Models/: final_spacecraft.mtl  final_terrain.mtl
src/: Lander.cpp  Lander.h  Octree.cpp  Octree.h  Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  SpaceLander.cpp  SpaceLander.h  Util.cpp  Util.h  box.h  main.cpp  ofApp.cpp  ofApp.h
